# website

./: .env  .gitignore  CNAME  README.md  atom.xml  cabal.project  cabal.project.freeze  deploy.hs  flake.nix  fourmolu.yaml  hie.yaml  index.html  index.md  site.hs  stack.yaml  webpage.cabal  website.cabal  website.hs
.devcontainer/: devcontainer.json
about/: index.html
blog/: bibtool.html  devcontainer-cabal-store.html  dragen.md  dymamic-jobs-github-actions.html  hello.html  index.html  test.html  test.md  works-on-my-machine.html
contact/: index.html
css/: breezedark.css  layout.css  pico.min.css  style.css  tango.css
js/: index.js
publications/: ast19.md  bp.md  ifl19.md  jss17.md  lic-thesis.md  licentiate-chalmers.md  plas20.md  qf.md  tfp20.md
pubs/: ast19.html  haskell18.html  icse21-src.html  ifl19.html  index.html  jss17.html  lic-thesis.html  licentiate-chalmers.html  plas20.html  tfp20.html
site/: index.md
src/: Deploy.hs  Site.hs
static/: about.md  contact.md
teaching/: afp21.html  afp22.html  afp22.md  algorithms19.html  algorithms19.md  css18.html  css18.md  css19.html  css19.md  css20.html  css20.md  css21.html  css22.html  databases.md  databases19.html  databases20-2.html  databases20-2.md  databases20.html  databases20.md  databases21.html  databases22.html  databases23.html  index.html  pcp20.html  pcp20.md  pcp21.html  pcp22.html
templates/: course-list.html  default.html  post-archive.html  post-list.html  post.html  pub-archive.html  pub-list-compact.html  pub-list.html  pub.html
website/: about.html  about.md  contact.html  (+2 more)
(+97 files in other folders)
