name:               webpage
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , filepath
  ghc-options:      -threaded
  default-language: Haskell2010

executable deploy
  main-is:          deploy.hs
  build-depends:    base == 4.*
                  , shelly == 1.7.*
                  , text
  ghc-options:      -threaded
  default-language: Haskell2010
