cabal-version:      2.2

name:               webpage
version:            0.1.0.0
build-type:         Simple

executable site
  hs-source-dirs:
    src
  main-is:          
    Site.hs
  build-depends:
      base == 4.*
    , hakyll
    , filepath
  ghc-options:      
    -threaded
  default-language:
    Haskell2010

executable deploy
  hs-source-dirs:
    src
  main-is:
    Deploy.hs
  build-depends:
      base == 4.*
    , shelly
    , text
  ghc-options:      
    -threaded
  default-language:
    Haskell2010
